bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:1: error: Missing closing brace `}' assumed here
def icyHot(temp1:Int, temp2: Int): Boolean = {
^IcyHot:1: error: expected class or object definition
def icyHot(temp1:Int, temp2: Int): Boolean = {
^